--- a/rate-repository-app/.eslintrc.json
+++ b/rate-repository-app/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "plugins": ["react", "react-native"],
+  "plugins": ["react", "react-native", "babel"],
   "settings": {
     "react": {
       "version": "detect"
