--- a/rate-repository-app/package.json
+++ b/rate-repository-app/package.json
@@ -27,6 +27,7 @@
     "@expo/metro-config": "^0.17.4",
     "@expo/metro-runtime": "~3.1.1",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "^2.7.7",
     "dotenv": "^16.4.5",
     "expo": "~51.0.22",
     "expo-linking": "^6.3.1",
@@ -36,8 +37,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-paper": "^5.12.5",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.25.1",
+    "use-debounce": "^10.0.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
